@@ -3,6 +3,7 @@ Version 0.5-8 (2013-03-06)
 o Revised vcd-tutorial showing some examples of plyr; added a section on RC models
 o Added Donner data with example of ggplot2 plot for a binomial glm()
 o Added vcd-tutorial section using ggplot2 for Donner data
+o Enhanced datasets() to provide a maxTitle argument
 
 Version 0.5-7 (2013-03-01)
 
